# software-rasterizer

./: CMakeLists.txt  README.md
rasterizer/: CMakeLists.txt  buffer.h  framebuffer.h  program.h  rasterizer.cpp  rasterizer.h  renderer.cpp  renderer.h  sampler.h  texture.h
rasterizer/detail/: test_member.h  tuple_helper.h
rasterizer/math/: matrix3.h  matrix4.h  rectangle.h  utility.cpp  utility.h  vector2.h  vector3.h  vector4.h
